objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product category</label>
        <referenceTo>Product_category__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_Conditions__c</fullName>
        <formula>IF(
INCLUDES(  ProductCategory__r.SpecificStorageConditions__c ,&apos;FridgeStorage&apos;),
&apos;Холодильник; &apos;,
&apos;&apos;
)+
IF(
INCLUDES( ProductCategory__r.SpecificStorageConditions__c,&apos;DryStorage&apos;),
&apos;Сухе приміщення; &apos;,
&apos;&apos;
)+
IF(
INCLUDES( ProductCategory__r.SpecificStorageConditions__c,&apos;WarmStorage&apos;),
&apos;Тепле приміщення; &apos;,
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Storage Conditions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Units</valueSetName>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prod info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>